Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:37:5: error: expected ';' at end of member declaration
     HDC Ball = txLoadImage ("Pictures\\Ball.bmp")
     ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:37:5: error: declaration of 'HDC__* Pictures::HDC' [-fpermissive]
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\windef.h:253:0,
                 from c:\users\zainu\desktop\курс\codeblocks\mingw\include\windows.h:48,
                 from C:\Users\zainu\Desktop\курс\TX\TXLib.h:873,
                 from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
c:\users\zainu\desktop\курс\codeblocks\mingw\include\windef.h:275:1: error: changes meaning of 'HDC' from 'typedef struct HDC__* HDC' [-fpermissive]
 DECLARE_HANDLE(HDC);
 ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:37:14: error: expected unqualified-id before '=' token
     HDC Ball = txLoadImage ("Pictures\\Ball.bmp")
              ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:153:40: error: 'Photo' was not declared in this scope
         txBitBlt (txDC(), 0, 50, 0, 0, Photo .Fon);
                                        ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:181:17: error: 'Photo' was not declared in this scope
     txDeleteDC (Photo .Fon);
                 ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In member function 'void Ball::Physics(int*, int*, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:302:50: warning: value computed is not used [-Wunused-value]
             x = W/2; vx = -10 + rand() % 20; -10 + rand() % 20;
                                                  ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:321:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:332:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:346:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d=0.01;
                                            ^
---------------------------------------------------------------------------------------------
[04.07.2021 11:18:20,28 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
